--- a/xbmc/pvrclients/MediaPortal/project/VS2008Express/XBMC_MPTV.vcproj
+++ b/xbmc/pvrclients/MediaPortal/project/VS2008Express/XBMC_MPTV.vcproj
@@ -66,7 +66,7 @@
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="false"
 				AdditionalDependencies="ws2_32.lib"
-				OutputFile="../../../../../addons/pvr/MediaPortal/XBMC_MPTV_win32.pvr"
+				OutputFile="../../../../../addons/pvr.team-mediaportal.tvserver/XBMC_MPTV_win32.pvr"
 				LinkIncremental="2"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="true"
@@ -149,7 +149,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="ws2_32.lib"
-				OutputFile="../../../../../addons/pvr/MediaPortal/XBMC_MPTV_win32.pvr"
+				OutputFile="../../../../../addons/pvr.team-mediaportal.tvserver/XBMC_MPTV_win32.pvr"
 				LinkIncremental="2"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="false"
