[PVR] libXBMC_addon.dll is a C dll and should not use std::string as function argument or return type. This fixes heap corruption problems under VC++. Revert commit fd3f383e76fed54ce7b9 (removes workaround)

--- a/lib/addons/library.xbmc.addon/project/VS2008Express/libXBMC_addon.vcproj
+++ b/lib/addons/library.xbmc.addon/project/VS2008Express/libXBMC_addon.vcproj
@@ -170,6 +170,10 @@
 				RelativePath="..\..\libXBMC_addon.cpp"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\..\..\addons\library.xbmc.addon\libXBMC_addon.h"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
