Fix link problem in release mode

--- a/xbmc/pvrclients/MediaPortal/lib/live555/LiveMedia555.vcproj
+++ b/xbmc/pvrclients/MediaPortal/lib/live555/LiveMedia555.vcproj
@@ -132,6 +132,7 @@
 			<Tool
 				Name="VCLibrarianTool"
 				OutputFile="shared\libLive555.lib"
+				IgnoreAllDefaultLibraries="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
