tvheadend: fix Windows compilation. Broken due to removal of the _STDC_CONSTANT_MACROS define in HTSPDemux.cpp

--- a/xbmc/pvrclients/tvheadend/project/VS2008Express/XBMC_hts.vcproj
+++ b/xbmc/pvrclients/tvheadend/project/VS2008Express/XBMC_hts.vcproj
@@ -41,7 +41,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\..\..\..\cores\dvdplayer\Codecs\ffmpeg;..\..\..\..\cores\dvdplayer\Codecs\ffmpeg\include;..\..\;..\..\pthread_win32;..\..\windows;..\..\..\..\addons\include;..\..\..\..\cores\dvdplayer\DVDDemuxers;..\..\..\..\..\xbmc\lib;..\..\..\..\..\xbmc\lib\libhts\Win32\include"
-				PreprocessorDefinitions="_WIN32;WIN32;_WINDOWS;_WIN32PC;_USE_32BIT_TIME_T;_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS;_WINSOCKAPI_;USE_DEMUX"
+				PreprocessorDefinitions="_WIN32;WIN32;_WINDOWS;_WIN32PC;_USE_32BIT_TIME_T;_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS;_WINSOCKAPI_;USE_DEMUX;__STDC_CONSTANT_MACROS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -116,7 +116,7 @@
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				AdditionalIncludeDirectories="..\..\..\..\cores\dvdplayer\Codecs\ffmpeg;..\..\..\..\cores\dvdplayer\Codecs\ffmpeg\include;..\..\;..\..\pthread_win32;..\..\windows;..\..\..\..\addons\include;..\..\..\..\cores\dvdplayer\DVDDemuxers;..\..\..\..\..\xbmc\lib;..\..\..\..\..\xbmc\lib\libhts\Win32\include"
-				PreprocessorDefinitions="_WIN32;WIN32;_WINDOWS;_WIN32PC;_USE_32BIT_TIME_T;_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS;_WINSOCKAPI_;USE_DEMUX"
+				PreprocessorDefinitions="_WIN32;WIN32;_WINDOWS;_WIN32PC;_USE_32BIT_TIME_T;_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS;_WINSOCKAPI_;USE_DEMUX;__STDC_CONSTANT_MACROS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				WarningLevel="3"
