Description added to recordings, recording starttime corrected
Signed-off-by: Marcel Groothuis <margro.xbmc@gmail.com>

--- a/xbmc/pvrclients/ForTheRecord/project/VS2008Express/XBMC_ForTheRecord.vcproj
+++ b/xbmc/pvrclients/ForTheRecord/project/VS2008Express/XBMC_ForTheRecord.vcproj
@@ -222,6 +222,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\recording.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\recordinggroup.cpp"
 				>
 			</File>
@@ -329,6 +333,10 @@
 			</File>
 			<File
 				RelativePath="..\..\pvrclient-fortherecord.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\recording.h"
 				>
 			</File>
 			<File
