--- a/xbmc/pvrclients/ForTheRecord/project/VS2008Express/XBMC_ForTheRecord.vcproj
+++ b/xbmc/pvrclients/ForTheRecord/project/VS2008Express/XBMC_ForTheRecord.vcproj
@@ -214,6 +214,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\guideprogram.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\KeepAliveThread.cpp"
 				>
 			</File>
@@ -321,6 +325,10 @@
 			</File>
 			<File
 				RelativePath="..\..\fortherecordrpc.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\guideprogram.h"
 				>
 			</File>
 			<File
