--- a/xbmc/pvrclients/ForTheRecord/project/VS2008Express/XBMC_ForTheRecord.vcproj
+++ b/xbmc/pvrclients/ForTheRecord/project/VS2008Express/XBMC_ForTheRecord.vcproj
@@ -238,6 +238,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\uri.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\utils.cpp"
 				>
 			</File>
@@ -353,6 +357,10 @@
 			</File>
 			<File
 				RelativePath="..\..\recordingsummary.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\uri.h"
 				>
 			</File>
 			<File
